Add changes so far