@@ -120,8 +120,8 @@ public class LowerPass implements Pass<jlitec.ir3.Program, Program> {
       case READLN -> {
         final var rs = (ReadlnStmt) stmt;
         yield switch (typeMap.get(rs.dest().id()).type()) {
-          case INT, BOOL -> List.of(new BranchLinkLowerStmt("readln_int_bool"));
-          case STRING -> List.of(new BranchLinkLowerStmt("getline_without_newline"));
+          case INT, BOOL -> List.of(new BranchLinkLowerStmt("readln_int_bool"), new MovLowerStmt(new Addressable.IdRval(rs.dest()), new Addressable.Reg(Register.R0)));
+          case STRING -> List.of(new BranchLinkLowerStmt("getline_without_newline"), new MovLowerStmt(new Addressable.IdRval(rs.dest()), new Addressable.Reg(Register.R0)));
           case VOID, CLASS -> throw new RuntimeException("should have failed typecheck");
         };
       }
@@ -288,15 +288,10 @@ public class LowerPass implements Pass<jlitec.ir3.Program, Program> {
           }
           case RVAL -> {
             final var re = (RvalExpr) fas.rhs();
-            final LowerStmt lowerStmt =
-                switch (re.getRvalExprType()) {
-                  case ID -> new MovLowerStmt(
-                      new Addressable.IdRval(idRvalExpr), new Addressable.IdRval((IdRvalExpr) re));
-                  case STRING, NULL, INT, BOOL -> new ImmediateLowerStmt(
-                      new Addressable.IdRval(idRvalExpr), re);
-                };
-            yield List.of(
-                lowerStmt, new FieldAssignLowerStmt(fas.lhsId().id(), fas.lhsField(), idRvalExpr));
+            yield switch (re.getRvalExprType()) {
+              case ID -> List.of(new FieldAssignLowerStmt(fas.lhsId().id(), fas.lhsField(), (IdRvalExpr) re));
+              case STRING, NULL, INT, BOOL -> List.of(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), re), new FieldAssignLowerStmt(fas.lhsId().id(), fas.lhsField(), idRvalExpr));
+            };
           }
           case CALL -> {
             final var ce = (CallExpr) fas.rhs();
@@ -381,53 +376,54 @@ public class LowerPass implements Pass<jlitec.ir3.Program, Program> {
 
   private static List<LowerStmt> generatePushStackLowerStmt(
       List<RvalExpr> rvalExprList, TempVarGen gen) {
-    final var result = new ArrayList<LowerStmt>();
-    final var elements = new ArrayList<IdRvalExpr>();
-    for (final var rvalExpr : rvalExprList) {
-      // Dummy variable to enforce exhaustiveness
-      final var dummy =
-          switch (rvalExpr.getRvalExprType()) {
-            case ID -> {
-              elements.add((IdRvalExpr) rvalExpr);
-              yield true;
-            }
-            case BOOL -> {
-              final var bre = (BoolRvalExpr) rvalExpr;
-              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.BOOL));
-              final var idRvalExpr = new IdRvalExpr(tempVar.id());
-              result.add(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), bre));
-              elements.add(idRvalExpr);
-              yield false;
-            }
-            case INT -> {
-              final var ire = (IntRvalExpr) rvalExpr;
-              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.INT));
-              final var idRvalExpr = new IdRvalExpr(tempVar.id());
-              result.add(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), ire));
-              elements.add(idRvalExpr);
-              yield true;
-            }
-            case STRING -> {
-              final var sre = (StringRvalExpr) rvalExpr;
-              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.STRING));
-              final var idRvalExpr = new IdRvalExpr(tempVar.id());
-              result.add(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), sre));
-              elements.add(idRvalExpr);
-              yield true;
-            }
-            case NULL -> {
-              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.STRING));
-              final var idRvalExpr = new IdRvalExpr(tempVar.id());
-              result.add(
-                  new ImmediateLowerStmt(
-                      new Addressable.IdRval(idRvalExpr), new StringRvalExpr("")));
-              elements.add(idRvalExpr);
-              yield true;
-            }
-          };
-    }
-    result.add(new PushStackLowerStmt(elements));
-    return Collections.unmodifiableList(result);
+    return List.of(new PushStackLowerStmt(rvalExprList));
+//    final var result = new ArrayList<LowerStmt>();
+//    final var elements = new ArrayList<IdRvalExpr>();
+//    for (final var rvalExpr : rvalExprList) {
+//      // Dummy variable to enforce exhaustiveness
+//      final var dummy =
+//          switch (rvalExpr.getRvalExprType()) {
+//            case ID -> {
+//              elements.add((IdRvalExpr) rvalExpr);
+//              yield true;
+//            }
+//            case BOOL -> {
+//              final var bre = (BoolRvalExpr) rvalExpr;
+//              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.BOOL));
+//              final var idRvalExpr = new IdRvalExpr(tempVar.id());
+//              result.add(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), bre));
+//              elements.add(idRvalExpr);
+//              yield false;
+//            }
+//            case INT -> {
+//              final var ire = (IntRvalExpr) rvalExpr;
+//              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.INT));
+//              final var idRvalExpr = new IdRvalExpr(tempVar.id());
+//              result.add(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), ire));
+//              elements.add(idRvalExpr);
+//              yield true;
+//            }
+//            case STRING -> {
+//              final var sre = (StringRvalExpr) rvalExpr;
+//              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.STRING));
+//              final var idRvalExpr = new IdRvalExpr(tempVar.id());
+//              result.add(new ImmediateLowerStmt(new Addressable.IdRval(idRvalExpr), sre));
+//              elements.add(idRvalExpr);
+//              yield true;
+//            }
+//            case NULL -> {
+//              final var tempVar = gen.gen(new Type.PrimitiveType(Ir3Type.STRING));
+//              final var idRvalExpr = new IdRvalExpr(tempVar.id());
+//              result.add(
+//                  new ImmediateLowerStmt(
+//                      new Addressable.IdRval(idRvalExpr), new StringRvalExpr("")));
+//              elements.add(idRvalExpr);
+//              yield true;
+//            }
+//          };
+//    }
+//    result.add(new PushStackLowerStmt(elements));
+//    return Collections.unmodifiableList(result);
   }
 
   private record IdRvalExprChunk(IdRvalExpr idRvalExpr, List<LowerStmt> lowerStmtList) {
